using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Triggers
{
    public static string FoundPlayer = "FoundPlayer";
    public static string GiveUp = "GiveUp";
    public static string ReadyToFindPlayer = "ReadyToFindPlayer";
    public static string StartGrowing = "StartGrowing";
    public static string Grown = "Grown";
    public static string Pollinated = "Pollinated";
}
